[gd_scene load_steps=5 format=3 uid="uid://b6nfxj6hr8867"]

[ext_resource type="Script" path="res://scripts/player/team_member.gd" id="1_c6x2y"]
[ext_resource type="PackedScene" uid="uid://bj6kr4ty7c8f3" path="res://scenes/util/health_component.tscn" id="3_kj3eh"]
[ext_resource type="PackedScene" uid="uid://bspqrsf7x4l" path="res://scenes/attack/hit_box.tscn" id="3_qqngv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ctp6b"]

[node name="TeamMember" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_c6x2y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ctp6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("3_kj3eh")]
position = Vector2(0, -10)
health = 30

[node name="AttackRange" parent="." instance=ExtResource("3_qqngv")]

[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
